--- a/index.html
+++ b/index.html
@@ -72,194 +72,197 @@
 
   <audio id="myAudio" hidden preload="auto"></audio>
   <button id="playButton">Press to Begin Trial</button>
+<script>
+  let isPlaying = false;
+  let trialQueued = false;
+  let participantID = null;
+  let sessionID = null;
+  let currentAudioFile = "";
+  let trialCounter = 1;
 
-  <script>
-    let isPlaying = false;
-    let trialQueued = false;
-    let participantID = null;
-    let currentAudioFile = ""; // ✅ Track which audio file was used
+  const audio = document.getElementById("myAudio");
+  const still1 = document.getElementById("stillframe1");
+  const still2 = document.getElementById("stillframe2");
+  const gapStill = document.getElementById("gapStillframe");
+  const v1 = document.getElementById("video1");
+  const vGap = document.getElementById("gapVideo");
+  const v2 = document.getElementById("video2");
 
-    const audio = document.getElementById("myAudio");
-    const still1 = document.getElementById("stillframe1");
-    const still2 = document.getElementById("stillframe2");
-    const gapStill = document.getElementById("gapStillframe");
-    const v1 = document.getElementById("video1");
-    const vGap = document.getElementById("gapVideo");
-    const v2 = document.getElementById("video2");
+  const visuals = [
+    { el: still1, start: 0, end: 0 },
+    { el: v1, start: 0, end: 0 },
+    { el: gapStill, start: 0, end: 0 },
+    { el: vGap, start: 0, end: 0 },
+    { el: v2, start: 0, end: 0 },
+    { el: still2, start: 0, end: 0 }
+  ];
 
-    const visuals = [
-      { el: still1, start: 0, end: 0 },
-      { el: v1, start: 0, end: 0 },
-      { el: gapStill, start: 0, end: 0 },
-      { el: vGap, start: 0, end: 0 },
-      { el: v2, start: 0, end: 0 },
-      { el: still2, start: 0, end: 0 }
-    ];
+  function hideAll() {
+    [still1, still2, gapStill, v1, vGap, v2].forEach(el => {
+      el.style.display = "none";
+      if (el.tagName === "VIDEO") {
+        el.pause();
+        el.currentTime = 0;
+      }
+    });
+  }
 
-    function hideAll() {
-      [still1, still2, gapStill, v1, vGap, v2].forEach(el => {
-        el.style.display = "none";
-        if (el.tagName === "VIDEO") {
-          el.pause();
-          el.currentTime = 0;
-        }
-      });
-    }
+  function showResponseOptions() {
+    document.body.innerHTML = "";
 
-    function showResponseOptions() {
-      document.body.innerHTML = "";
+    const question = document.createElement("h1");
+    question.textContent = "Which elevator did Melody ride?";
+    document.body.appendChild(question);
 
-      const question = document.createElement("h1");
-      question.textContent = "Which elevator did Melody ride?";
-      document.body.appendChild(question);
+    const options = document.createElement("div");
+    options.style.display = "flex";
+    options.style.justifyContent = "center";
+    options.style.marginTop = "40px";
 
-      const options = document.createElement("div");
-      options.style.display = "flex";
-      options.style.justifyContent = "center";
-      options.style.marginTop = "40px";
+    const normal = document.createElement("img");
+    normal.src = "normal.jpg";
+    normal.className = "elevator-option";
+    normal.alt = "Normal Elevator";
+    normal.onclick = () => handleResponse("normal");
 
-      const normal = document.createElement("img");
-      normal.src = "normal.jpg";
-      normal.className = "elevator-option";
-      normal.alt = "Normal Elevator";
-      normal.onclick = () => handleResponse("normal");
+    const wonky = document.createElement("img");
+    wonky.src = "wonky.png";
+    wonky.className = "elevator-option";
+    wonky.alt = "Wonky Elevator";
+    wonky.onclick = () => handleResponse("wonky");
 
-      const wonky = document.createElement("img");
-      wonky.src = "wonky.png";
-      wonky.className = "elevator-option";
-      wonky.alt = "Wonky Elevator";
-      wonky.onclick = () => handleResponse("wonky");
+    const order = Math.random() < 0.5 ? [normal, wonky] : [wonky, normal];
+    order.forEach(el => options.appendChild(el));
+    document.body.appendChild(options);
+  }
 
-      const order = Math.random() < 0.5 ? [normal, wonky] : [wonky, normal];
-      order.forEach(el => options.appendChild(el));
-      document.body.appendChild(options);
-    }
-
-    function handleResponse(choice) {
-      const timestamp = new Date().toISOString();
-      const entry = {
-        participant: participantID,
-        timestamp,
-        choice,
-        audio: currentAudioFile // ✅ Include filename
-      };
-
-      const scriptURL = "https://script.google.com/macros/s/AKfycbyRNjbPYwGEVTB-A_eSWNyrSrJekcwKLRgy8iXMpokeGjvEddCzSgbHaq8hSkJxKiqd/exec"; 
-
-      fetch(scriptURL, {
-        method: "POST",
-        body: JSON.stringify(entry),
-        headers: { "Content-Type": "application/json" }
-      })
-      .then(res => res.text())
-      .then(msg => {
-        alert("Response recorded! Thank you.");
-        location.reload(); // Reload for next trial (or remove if doing multiple trials)
-      })
-      .catch(err => {
-        console.error("Error:", err);
-        alert("Failed to submit response.");
-      });
-    }
-
-    window.onload = () => {
-      participantID = prompt("Enter your Participant ID:");
-      if (!participantID) participantID = "anon_" + Math.floor(Math.random() * 100000);
+  function handleResponse(choice) {
+    const timestamp = new Date().toISOString();
+    const entry = {
+      participant: participantID,
+      session: sessionID,
+      trial_num: trialCounter,
+      timestamp,
+      choice,
+      audio: currentAudioFile
     };
 
-    document.getElementById("playButton").addEventListener("click", async function () {
-      if (isPlaying) {
-        trialQueued = true;
-        return;
-      }
+    const backendlessURL = "https://api.backendless.com/04D99C8B-3B22-454C-889B-5E66A5798C47/38037288-90E3-4F8A-87D6-E052FCD03D67/data/responses";
 
-      async function playTrial() {
-        isPlaying = true;
-        trialQueued = false;
-        hideAll();
+    fetch(backendlessURL, {
+      method: "POST",
+      headers: {
+        "Content-Type": "application/json"
+      },
+      body: JSON.stringify(entry)
+    })
+    .then(res => res.json())
+    .then(data => {
+      trialCounter++;
+      setTimeout(() => playTrial(), 500); // play next trial automatically
+    })
+    .catch(err => {
+      console.error("Error:", err);
+      alert("Failed to submit response.");
+    });
+  }
 
-        try {
-          const response = await fetch("audio_files.csv");
-          if (!response.ok) throw new Error("CSV file not found");
-          const text = await response.text();
-          const rows = text.trim().split("\n").slice(1).map(r => r.split(",").map(x => x.trim()));
-          if (rows.length === 0) throw new Error("No valid audio rows found");
+  window.onload = () => {
+    participantID = prompt("Enter your Participant ID:");
+    if (!participantID) participantID = "anon_" + Math.floor(Math.random() * 100000);
+    const now = new Date().toISOString();
+    sessionID = `${participantID}_${now}`;
+  };
 
-          const [filename, original, gap, test] = rows[Math.floor(Math.random() * rows.length)];
-          const originalSec = parseFloat(original);
-          const gapSec = parseFloat(gap);
-          const testSec = parseFloat(test);
-          const audioURL = filename;
-          currentAudioFile = filename; // ✅ Track current audio
+  document.getElementById("playButton").addEventListener("click", function () {
+    if (!isPlaying) playTrial();
+    else trialQueued = true;
+  });
 
-          await Promise.all([v1.play().then(() => v1.pause()), vGap.play().then(() => vGap.pause()), v2.play().then(() => v2.pause())]);
+  async function playTrial() {
+    isPlaying = true;
+    trialQueued = false;
+    hideAll();
 
-          const video1Sec = v1.duration;
-          const gapVideoSec = vGap.duration;
-          const video2Sec = v2.duration;
+    try {
+      const response = await fetch("audio_files.csv");
+      if (!response.ok) throw new Error("CSV file not found");
+      const text = await response.text();
+      const rows = text.trim().split("\n").slice(1).map(r => r.split(",").map(x => x.trim()));
+      if (rows.length === 0) throw new Error("No valid audio rows found");
 
-          const preStillSec = Math.max(0, originalSec - video1Sec);
-          const gapStillSec = Math.max(0, gapSec - gapVideoSec);
-          const postStillSec = Math.max(0, testSec - video2Sec);
+      const [filename, original, gap, test] = rows[Math.floor(Math.random() * rows.length)];
+      const originalSec = parseFloat(original);
+      const gapSec = parseFloat(gap);
+      const testSec = parseFloat(test);
+      const audioURL = filename;
+      currentAudioFile = filename;
 
-          let t = 0;
-          visuals[0].start = t;
-          visuals[0].end = t += preStillSec;
-          visuals[1].start = t;
-          visuals[1].end = t += video1Sec;
-          visuals[2].start = t;
-          visuals[2].end = t += gapStillSec;
-          visuals[3].start = t;
-          visuals[3].end = t += gapVideoSec;
-          visuals[4].start = t;
-          visuals[4].end = t += video2Sec;
-          visuals[5].start = t;
-          visuals[5].end = t += postStillSec;
+      await Promise.all([v1.play().then(() => v1.pause()), vGap.play().then(() => vGap.pause()), v2.play().then(() => v2.pause())]);
 
-          const totalSec = visuals[5].end;
+      const video1Sec = v1.duration;
+      const gapVideoSec = vGap.duration;
+      const video2Sec = v2.duration;
 
-          audio.src = audioURL;
-          await new Promise((resolve, reject) => {
-            audio.oncanplaythrough = resolve;
-            audio.onerror = () => reject("Audio failed to load: " + audioURL);
-          });
+      const preStillSec = Math.max(0, originalSec - video1Sec);
+      const gapStillSec = Math.max(0, gapSec - gapVideoSec);
+      const postStillSec = Math.max(0, testSec - video2Sec);
 
-          let currentVisual = null;
-          function updateVisuals() {
-            const t = audio.currentTime;
-            for (const v of visuals) {
-              if (t >= v.start && t < v.end) {
-                if (currentVisual !== v.el) {
-                  hideAll();
-                  v.el.style.display = "block";
-                  if (v.el.tagName === "VIDEO") v.el.play();
-                  currentVisual = v.el;
-                }
-                break;
-              }
-            }
+      let t = 0;
+      visuals[0].start = t;
+      visuals[0].end = t += preStillSec;
+      visuals[1].start = t;
+      visuals[1].end = t += video1Sec;
+      visuals[2].start = t;
+      visuals[2].end = t += gapStillSec;
+      visuals[3].start = t;
+      visuals[3].end = t += gapVideoSec;
+      visuals[4].start = t;
+      visuals[4].end = t += video2Sec;
+      visuals[5].start = t;
+      visuals[5].end = t += postStillSec;
 
-            if (t < totalSec) {
-              requestAnimationFrame(updateVisuals);
-            } else {
+      const totalSec = visuals[5].end;
+
+      audio.src = audioURL;
+      await new Promise((resolve, reject) => {
+        audio.oncanplaythrough = resolve;
+        audio.onerror = () => reject("Audio failed to load: " + audioURL);
+      });
+
+      let currentVisual = null;
+      function updateVisuals() {
+        const t = audio.currentTime;
+        for (const v of visuals) {
+          if (t >= v.start && t < v.end) {
+            if (currentVisual !== v.el) {
               hideAll();
-              isPlaying = false;
-              showResponseOptions();
-              if (trialQueued) playTrial();
+              v.el.style.display = "block";
+              if (v.el.tagName === "VIDEO") v.el.play();
+              currentVisual = v.el;
             }
+            break;
           }
+        }
 
-          await audio.play();
-          updateVisuals();
-        } catch (err) {
-          console.error("Sync error:", err);
-          alert("Error playing trial. See console for details.");
+        if (t < totalSec) {
+          requestAnimationFrame(updateVisuals);
+        } else {
+          hideAll();
           isPlaying = false;
+          showResponseOptions();
+          if (trialQueued) playTrial();
         }
       }
 
-      playTrial();
-    });
-  </script>
+      await audio.play();
+      updateVisuals();
+    } catch (err) {
+      console.error("Sync error:", err);
+      alert("Error playing trial. See console for details.");
+      isPlaying = false;
+    }
+  }
+</script>
 </body>
 </html>
