--- a/index.html
+++ b/index.html
@@ -73,12 +73,11 @@
   <audio id="myAudio" hidden preload="auto"></audio>
   <button id="playButton">Press to Begin Trial</button>
 <script>
-  let isPlaying = false;
-  let trialQueued = false;
   let participantID = null;
   let sessionID = null;
   let currentAudioFile = "";
   let trialCounter = 1;
+  const totalTrials = 3;
 
   const audio = document.getElementById("myAudio");
   const still1 = document.getElementById("stillframe1");
@@ -97,14 +96,129 @@
     { el: still2, start: 0, end: 0 }
   ];
 
+  window.onload = () => {
+    participantID = prompt("Enter your Participant ID:");
+    if (!participantID) participantID = "anon_" + Math.floor(Math.random() * 100000);
+    const now = new Date().toISOString();
+    sessionID = `${participantID}_${now}`;
+    showStartButton();
+  };
+
+  function showStartButton() {
+    document.body.innerHTML = `
+      <div id="visual-container">
+        <img class="media-content" id="stillframe1" src="stillframe1.png" />
+        <img class="media-content" id="gapStillframe" src="gapStillframe.png" />
+        <img class="media-content" id="stillframe2" src="stillframe2.png" />
+        <video class="media-content" id="video1" src="video1.mp4" playsinline preload="auto" muted></video>
+        <video class="media-content" id="gapVideo" src="gapVideo.mp4" playsinline preload="auto" muted></video>
+        <video class="media-content" id="video2" src="video2.mp4" playsinline preload="auto" muted></video>
+      </div>
+      <audio id="myAudio" hidden preload="auto"></audio>
+      <button id="playButton">Press to Begin Trial ${trialCounter} of ${totalTrials}</button>
+    `;
+
+    document.getElementById("playButton").addEventListener("click", () => playTrial());
+  }
+
   function hideAll() {
-    [still1, still2, gapStill, v1, vGap, v2].forEach(el => {
+    const all = document.querySelectorAll(".media-content");
+    all.forEach(el => {
       el.style.display = "none";
       if (el.tagName === "VIDEO") {
         el.pause();
         el.currentTime = 0;
       }
     });
+  }
+
+  async function playTrial() {
+    hideAll();
+
+    try {
+      const response = await fetch("audio_files.csv");
+      if (!response.ok) throw new Error("CSV file not found");
+      const text = await response.text();
+      const rows = text.trim().split("\n").slice(1).map(r => r.split(",").map(x => x.trim()));
+      if (rows.length === 0) throw new Error("No valid audio rows found");
+
+      const [filename, original, gap, test] = rows[Math.floor(Math.random() * rows.length)];
+      const originalSec = parseFloat(original);
+      const gapSec = parseFloat(gap);
+      const testSec = parseFloat(test);
+      const audioURL = filename;
+      currentAudioFile = filename;
+
+      const v1 = document.getElementById("video1");
+      const vGap = document.getElementById("gapVideo");
+      const v2 = document.getElementById("video2");
+
+      await Promise.all([
+        v1.play().then(() => v1.pause()),
+        vGap.play().then(() => vGap.pause()),
+        v2.play().then(() => v2.pause())
+      ]);
+
+      const video1Sec = v1.duration;
+      const gapVideoSec = vGap.duration;
+      const video2Sec = v2.duration;
+
+      const preStillSec = Math.max(0, originalSec - video1Sec);
+      const gapStillSec = Math.max(0, gapSec - gapVideoSec);
+      const postStillSec = Math.max(0, testSec - video2Sec);
+
+      let t = 0;
+      visuals[0].start = t;
+      visuals[0].end = t += preStillSec;
+      visuals[1].start = t;
+      visuals[1].end = t += video1Sec;
+      visuals[2].start = t;
+      visuals[2].end = t += gapStillSec;
+      visuals[3].start = t;
+      visuals[3].end = t += gapVideoSec;
+      visuals[4].start = t;
+      visuals[4].end = t += video2Sec;
+      visuals[5].start = t;
+      visuals[5].end = t += postStillSec;
+
+      const totalSec = visuals[5].end;
+      const audio = document.getElementById("myAudio");
+      audio.src = audioURL;
+
+      await new Promise((resolve, reject) => {
+        audio.oncanplaythrough = resolve;
+        audio.onerror = () => reject("Audio failed to load: " + audioURL);
+      });
+
+      let currentVisual = null;
+      function updateVisuals() {
+        const t = audio.currentTime;
+        for (const v of visuals) {
+          if (t >= v.start && t < v.end) {
+            if (currentVisual !== v.el) {
+              hideAll();
+              v.el.style.display = "block";
+              if (v.el.tagName === "VIDEO") v.el.play();
+              currentVisual = v.el;
+            }
+            break;
+          }
+        }
+
+        if (t < totalSec) {
+          requestAnimationFrame(updateVisuals);
+        } else {
+          hideAll();
+          showResponseOptions();
+        }
+      }
+
+      await audio.play();
+      updateVisuals();
+    } catch (err) {
+      console.error("Error during trial playback:", err);
+      alert("Something went wrong. See console for details.");
+    }
   }
 
   function showResponseOptions() {
@@ -159,109 +273,22 @@
     .then(res => res.json())
     .then(data => {
       trialCounter++;
-      setTimeout(() => playTrial(), 500); // play next trial automatically
+      if (trialCounter > totalTrials) {
+        showEndMessage();
+      } else {
+        showStartButton(); // go back to trial button
+      }
     })
     .catch(err => {
-      console.error("Error:", err);
+      console.error("Error submitting response:", err);
       alert("Failed to submit response.");
     });
   }
 
-  window.onload = () => {
-    participantID = prompt("Enter your Participant ID:");
-    if (!participantID) participantID = "anon_" + Math.floor(Math.random() * 100000);
-    const now = new Date().toISOString();
-    sessionID = `${participantID}_${now}`;
-  };
-
-  document.getElementById("playButton").addEventListener("click", function () {
-    if (!isPlaying) playTrial();
-    else trialQueued = true;
-  });
-
-  async function playTrial() {
-    isPlaying = true;
-    trialQueued = false;
-    hideAll();
-
-    try {
-      const response = await fetch("audio_files.csv");
-      if (!response.ok) throw new Error("CSV file not found");
-      const text = await response.text();
-      const rows = text.trim().split("\n").slice(1).map(r => r.split(",").map(x => x.trim()));
-      if (rows.length === 0) throw new Error("No valid audio rows found");
-
-      const [filename, original, gap, test] = rows[Math.floor(Math.random() * rows.length)];
-      const originalSec = parseFloat(original);
-      const gapSec = parseFloat(gap);
-      const testSec = parseFloat(test);
-      const audioURL = filename;
-      currentAudioFile = filename;
-
-      await Promise.all([v1.play().then(() => v1.pause()), vGap.play().then(() => vGap.pause()), v2.play().then(() => v2.pause())]);
-
-      const video1Sec = v1.duration;
-      const gapVideoSec = vGap.duration;
-      const video2Sec = v2.duration;
-
-      const preStillSec = Math.max(0, originalSec - video1Sec);
-      const gapStillSec = Math.max(0, gapSec - gapVideoSec);
-      const postStillSec = Math.max(0, testSec - video2Sec);
-
-      let t = 0;
-      visuals[0].start = t;
-      visuals[0].end = t += preStillSec;
-      visuals[1].start = t;
-      visuals[1].end = t += video1Sec;
-      visuals[2].start = t;
-      visuals[2].end = t += gapStillSec;
-      visuals[3].start = t;
-      visuals[3].end = t += gapVideoSec;
-      visuals[4].start = t;
-      visuals[4].end = t += video2Sec;
-      visuals[5].start = t;
-      visuals[5].end = t += postStillSec;
-
-      const totalSec = visuals[5].end;
-
-      audio.src = audioURL;
-      await new Promise((resolve, reject) => {
-        audio.oncanplaythrough = resolve;
-        audio.onerror = () => reject("Audio failed to load: " + audioURL);
-      });
-
-      let currentVisual = null;
-      function updateVisuals() {
-        const t = audio.currentTime;
-        for (const v of visuals) {
-          if (t >= v.start && t < v.end) {
-            if (currentVisual !== v.el) {
-              hideAll();
-              v.el.style.display = "block";
-              if (v.el.tagName === "VIDEO") v.el.play();
-              currentVisual = v.el;
-            }
-            break;
-          }
-        }
-
-        if (t < totalSec) {
-          requestAnimationFrame(updateVisuals);
-        } else {
-          hideAll();
-          isPlaying = false;
-          showResponseOptions();
-          if (trialQueued) playTrial();
-        }
-      }
-
-      await audio.play();
-      updateVisuals();
-    } catch (err) {
-      console.error("Sync error:", err);
-      alert("Error playing trial. See console for details.");
-      isPlaying = false;
-    }
+  function showEndMessage() {
+    document.body.innerHTML = `
+      <h1>All done! Thank you for participating.</h1>
+    `;
   }
 </script>
 </body>
